--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,13 @@
 
+ion-card-header{
+  
+    background-color:#2A3F54;
+}
+
+ion-card-title{
+    color: white;
+}
+
+ion-content {
+    background-color: #00262B;
+}
