--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
-<ion-content>
+
+<ion-content color="#00262B">
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+      <ion-card>
+          <ion-card-header>
+            
+            <ion-thumbnail >
+                <img src="http://nowipicks.com/push/template/images/user.png">
+              </ion-thumbnail>
+            <ion-card-title>Sistema de Notificaciones</ion-card-title>
+         
+          </ion-card-header>
+        
+          <ion-card-content style="color:white;">
+           Bienvenido a Nowi Picks, sistema en donde podra recibir notificaciones en tiempo real en su iPhone. Haga click en el siguiente botón para ver los PICKS del dia.
+          </ion-card-content>
+          <ion-button  (click)="verPicks();" expand="block">PICKS</ion-button>
+        </ion-card>
+        </div>
 </ion-content>
