--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,10 @@
       <ion-title center text-align-center>
         Nowi Picks
       </ion-title>
-      <ion-button (click)="logout()" slot="end"><ion-icon slot="icon-only" name="log-out"></ion-icon></ion-button>
-    </ion-toolbar>
+      <!--
+<ion-button (click)="logout()" slot="end"><ion-icon slot="icon-only" name="log-out"></ion-icon></ion-button>
+    
+
+
+      --></ion-toolbar>
   </ion-header>
