--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,7 +9,8 @@
        
         <ion-item (click)="verHome();">Inicio</ion-item>
         <ion-item (click)="verPicks();">Picks</ion-item>
-        
+        <ion-item (click)="logout();"><ion-icon slot="icon-only" name="log-out"></ion-icon>Logout</ion-item>
+      
 
       </ion-list>
     </ion-content>
