--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -30,7 +30,9 @@
                   </ion-item>
                 </div>
                 <div padding>
-                    {{tokensito}}
+                    Impresiones:
+                    Tokensito: {{tokensito}}
+                  version 0.0.0.5
                   <ion-button  size="large" type="submit" color="#C2D506;" expand="block">Enviar</ion-button>
                 </div>
                 
