--- a/src/app/second/second.page.html
+++ b/src/app/second/second.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Second</ion-title>
+    <ion-title>Aviso</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
     </ion-card-header>
 
     <ion-card-content>
-      Contenido de ubicación
+     
       <h2>{{price}}</h2>
     </ion-card-content>
   </ion-card>
