--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,58 @@
 <app-header></app-header>
 
+  
+  <ion-content color="">
+    <form  #form="ngForm" (ngSubmit)="postData(nombre,correo,telefono)">
+      <ion-grid>
+        <ion-row color="primary" justify-content-center>
+          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+            <div text-center padding>
+              <h3 style="color:black;">Total Hoy:0</h3>
+            </div>
+            <div padding>
+              <ion-item>
+                  <ion-label position="floating">Nombre</ion-label>
+                <ion-input  name="nombre" type="text" placeholder="" [(ngModel)]="nombre" required></ion-input>
+              </ion-item>
+              <ion-item>
+                  <ion-label position="floating">E-mail</ion-label>
+                <ion-input name="correo" type="email" placeholder="" [(ngModel)]="correo" required></ion-input>
+              </ion-item>
+              <ion-item>
+                  <ion-label position="floating">Telefono</ion-label>
+                <ion-input name="telefono" type="text" placeholder="" [(ngModel)]="telefono" required></ion-input>
+              </ion-item>
+             <!-- <ion-item>
+                <ion-input name="deviceToken" type="text" placeholder="deviceToken" [(ngModel)]="deviceToken" value="{{tokensito2}}" required></ion-input>
+              </ion-item> -->
+            </div>
+            <div padding>
+              
+                <!-- Tokensito: {{tokensito2}} 
+                <ion-button expand="full"  (click)="obtenerToken()">Obtener Token</ion-button>
+                <ion-button expand="full"  (click)="obtenerToken2()">Obtener TokenRefresh</ion-button>
+                --><ion-button  expand="full"  type="submit"  >Enviar</ion-button>
+              
+            </div>
+            
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    
+    </form>
+  </ion-content>
+  
+     
+     
+  
+    
+  
+<!--
 
+
+
+
+  
 <ion-content color="#00262B">
   <div class="ion-padding">
       <ion-card>
@@ -19,4 +71,4 @@
           <ion-button  (click)="verPicks();" expand="block">PICKS</ion-button>
         </ion-card>
         </div>
-</ion-content>
+</ion-content>-->
