--- a/src/app/pages/list/list.page.scss
+++ b/src/app/pages/list/list.page.scss
@@ -12,7 +12,20 @@ width: 100%;
 }
 
 ion-card-header {
-  background-color: #E0EF07;
+  /*background-color: #E0EF07;*/
   padding:10px;
 }
 
+.amarillo {
+   background-color: #C2D102;
+}
+
+.oscuro {
+  background-color: #2A3F54;
+  color:#fff;
+}
+
+.blanco {
+color:#fff;
+
+}
